# sample-python-rag-chatbot

./: README.md
.devcontainer/: devcontainer.json
backend/: pyproject.toml  requirements.txt
backend/src/: app.py  qdrant.py  rag.py
frontend/src/: App.js  QuestionForm.js
